<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg1"
    android:gravity="center_vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="432dp"
        android:orientation="vertical" >
        
        <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="25dp"
        android:text="@string/books"
        android:textColor="#ffffff"
        android:textSize="25sp" />
 
    <Button
        android:id="@+id/btnbook1"
        android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book1" />

    <Button
        android:id="@+id/btnbook2"
       android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book2"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book3" 
       />

    <Button
        android:id="@+id/button4"
        android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book4"
         />

    <Button
        android:id="@+id/button5"
        android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book5" />

    <Button
        android:id="@+id/button6"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book6" />

    <Button
        android:id="@+id/button7"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book7" />

    <Button
        android:id="@+id/button8"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book8" />

    <Button
        android:id="@+id/button9"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book9" />
    <Button
        android:id="@+id/button10"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book10" />
    <Button
        android:id="@+id/button11"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book11" />
    <Button
        android:id="@+id/button12"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book12" />
    <Button
        android:id="@+id/button13"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book13" />
    <Button
        android:id="@+id/button14"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book14" />
    <Button
        android:id="@+id/button15"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book15" />
    
    <Button
        android:id="@+id/button16"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book16" />
    
    <Button
        android:id="@+id/button17"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book17" />
    
    <Button
        android:id="@+id/button18"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book18" />
    
    <Button
        android:id="@+id/button19"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book19" />
    
    <Button
        android:id="@+id/button20"
         android:layout_width="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
    	android:textSize="15sp"
        android:text="@string/book20" />

</LinearLayout>
</ScrollView>
