<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg1"
    android:gravity="center_vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="432dp"
        android:orientation="vertical" >
 
	<TextView
    android:id="@+id/TextViewTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/feedbacktitle"
    android:layout_marginTop="15dp"
    android:textColor="#ffffff"
    android:textSize="15sp">
	</TextView>
	
	<EditText
    android:id="@+id/EditTextName"
    android:layout_height="wrap_content"
    android:hint="@string/feedbackname"
    android:inputType="textPersonName"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:textColor="#ffffff"
    android:textSize="15sp"
    android:layout_width="fill_parent">
	</EditText>

	<Spinner
    android:id="@+id/SpinnerFeedbackType"
    android:layout_height="wrap_content"
    android:prompt="@string/feedbacktype"
    android:layout_width="fill_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:textColor="#ffffff"
    android:textSize="15sp"
    android:entries="@array/feedbacktypelist">
</Spinner>

	<EditText
    android:id="@+id/EditTextFeedbackBody"
    android:layout_height="wrap_content"
    android:hint="@string/feedbackbody"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:inputType="textMultiLine"
    android:lines="5"
    android:textColor="#ffffff"
    android:layout_width="fill_parent">
</EditText>

	<CheckBox
    android:id="@+id/CheckBoxResponse"
    android:layout_height="wrap_content"
    android:text="@string/feedbackresponse"
    android:textColor="#ffffff"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_width="fill_parent">
</CheckBox>

	<Button
    android:id="@+id/ButtonSendFeedback"
    android:layout_height="wrap_content"
    android:text="@string/feedbackbutton"
    android:onClick="sendFeedback"
    android:textColor="#ffffff"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:layout_width="fill_parent">
</Button>
 
    </LinearLayout>
</ScrollView>