<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg6"
    android:gravity="center_vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:text="@string/welcm"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <Button
        android:id="@+id/buttonSignIN"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="signIn"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonSignUP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="163dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:contentDescription="@string/desc"
        android:src="@drawable/mlearn" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:layout_marginLeft="195dp"
        android:text="@string/ver"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>
</ScrollView>