<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical" >

    	<RelativeLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
    <TextView
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fullName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />
        
    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fullName"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/age"
        android:layout_below="@+id/userId"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/flname"
        android:textColor="#ffffff" >
        <requestFocus />
        </EditText>

    <Button
        android:id="@+id/save"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/age"
        android:layout_marginTop="26dp"
        android:onClick="addData"
        android:text="@string/save" />

    <Button
        android:id="@+id/delete"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/view"
        android:layout_below="@+id/view"
        android:layout_marginTop="16dp"
        android:onClick="drop"
        android:text="@string/del" />

    <Button
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/save"
        android:layout_marginTop="17dp"
        android:onClick="viewData"
        android:text="@string/view" />

</RelativeLayout>
</ScrollView>
